// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateFeatureStrategySegmentsSchema schema 1`] = `
{
  "errors": [
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'projectId'",
      "params": {
        "missingProperty": "projectId",
      },
      "schemaPath": "#/required",
    },
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'strategyId'",
      "params": {
        "missingProperty": "strategyId",
      },
      "schemaPath": "#/required",
    },
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'environmentId'",
      "params": {
        "missingProperty": "environmentId",
      },
      "schemaPath": "#/required",
    },
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'segmentIds'",
      "params": {
        "missingProperty": "segmentIds",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/updateFeatureStrategySegmentsSchema",
}
`;

exports[`updateFeatureStrategySegmentsSchema schema 2`] = `
{
  "errors": [
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'projectId'",
      "params": {
        "missingProperty": "projectId",
      },
      "schemaPath": "#/required",
    },
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'environmentId'",
      "params": {
        "missingProperty": "environmentId",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/updateFeatureStrategySegmentsSchema",
}
`;
